--- a/lecture-12.ipynb
+++ b/lecture-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -104,10 +104,29 @@
    "source": [
     "## Today: Predictive modeling continued\n",
     "\n",
-    "**Focus**: featuring engineering and adding spatial based features\n",
+    "**Focus**: much more hands-on experience with featuring engineering and adding spatial based features\n",
     "\n",
     "- **Part 1:** Revisiting housing prices modeling\n",
     "- **Part 2:** Predicting bikeshare demand in Philadelphia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Why is feature engineering so important?\n",
+    "\n",
+    "**Garbage in, garbage out**\n",
+    "\n",
+    "- What we're trying to do is build the best possible model for a particular thing we care about, e.g., housing price, bikeshare trips, etc\n",
+    "- Our machine learning models try to translate from some set of input features to the thing we care about\n",
+    "- You should think of the input features as having *all of the same information* as the predicted quantity — *they are just a different representation*\n",
+    "\n",
+    "**Takeway:** If your input features are poorly designed (for example, completely unrelated to thing you want to predict), then no matter how good your machine learning model is or how well you \"train\" it, then the model will never be able to do the translation from features to predicted value."
    ]
   },
   {
@@ -1348,6 +1367,57 @@
     }
    },
    "source": [
+    "## What about correlations?\n",
+    "\n",
+    "Let's have a look at the correlations of numerical columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cols = [\n",
+    "    \"total_livable_area\",\n",
+    "    \"total_area\",\n",
+    "    \"garage_spaces\",\n",
+    "    \"fireplaces\",\n",
+    "    \"number_of_bathrooms\",\n",
+    "    \"number_of_bedrooms\",\n",
+    "    \"number_stories\",\n",
+    "    \"logDistGraffiti\",\n",
+    "    \"logDistSubway\", \n",
+    "    \"sale_price\"\n",
+    "]\n",
+    "sns.heatmap(sales[cols].corr(), cmap='coolwarm', annot=True, vmin=-1, vmax=1);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Now, let's re-run our model...did it help?"
    ]
   },
@@ -1920,22 +1990,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nhand/anaconda3/envs/py37/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_trips = pd.read_csv(\"./data/indego-trips-2018-2019.csv.tar.gz\")"
    ]
@@ -2547,16 +2608,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
-    "G = ox.graph_from_bbox(ymax, ymin, xmax, xmin)"
+    "Create the graph object from the bounding box:"
    ]
   },
   {
@@ -2569,7 +2628,44 @@
    },
    "outputs": [],
    "source": [
+    "G = ox.graph_from_bbox(ymax, ymin, xmax, xmin)\n",
+    "\n",
     "G"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Let's plot the graph using the built-in plotting from osmnx:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ox.plot_graph(G, fig_height=10);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Now extract the nodes (intersections) from the graph into a GeoDataFrame:"
    ]
   },
   {
@@ -2595,7 +2691,18 @@
    },
    "outputs": [],
    "source": [
-    "interesections"
+    "interesections.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Now, compute the average distance to the 10 nearest intersections:"
    ]
   },
   {
@@ -2622,6 +2729,17 @@
     "\n",
     "# STEP 5: add back to the original dataset\n",
     "bike_data['logIntersectionDists'] = np.log10(interDists.mean(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Let's plot the stations, coloring by the new feature (distance to intersections):"
    ]
   },
   {
@@ -2708,6 +2826,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The log of the distances to the 5 nearest stations:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2742,6 +2867,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's add the trip counts of the 5 neighboring stations:\n",
+    "\n",
+    "**Use the indices returned by the NearestNeighbors() algorithm to identify which stations are the 5 neighbors in the original data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stationIndices[:, 1:]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2751,7 +2894,7 @@
    },
    "outputs": [],
    "source": [
-    "# the total trips for the stations\n",
+    "# the total trips for the stations from original data frame\n",
     "total_start_trips = bike_data['total_start_trips'].values\n",
     "\n",
     "# get the trips for the 5 nearest neighbors (ignoring first match)\n",
@@ -2769,7 +2912,76 @@
     }
    },
    "source": [
-    "## Let's fit a model!"
+    "## Is there a correlation between trip counts and the spatial lag?\n",
+    "\n",
+    "Yes!\n",
+    "\n",
+    "We can use seaborn to make a quick plot:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sns.regplot(bike_data['laggedTrips'], bike_data['total_start_trips'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Let's look at the correlations of all of our features\n",
+    "\n",
+    "Again, use seaborn to investigate.\n",
+    "\n",
+    "**Remember:** we don't want to include multipl features that are highly correlated in our model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "feature_cols = [\n",
+    " 'total_start_trips',\n",
+    " 'totalDocks',\n",
+    " 'percent_car',\n",
+    " 'logDistRests',\n",
+    " 'within_cc_bid',\n",
+    " 'logIntersectionDists',\n",
+    " 'logStationDists',\n",
+    " 'laggedTrips']\n",
+    "sns.heatmap(bike_data[feature_cols].corr(), cmap='coolwarm', annot=True, vmin=-1, vmax=1);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Let's fit a model!\n",
+    "\n",
+    "Just as before, the plan is to:\n",
+    "- Fit a random forest model, using cross validation to optimize (some) hyperparameters\n",
+    "- Compare to a baseline linear regression model"
    ]
   },
   {
@@ -2844,8 +3056,19 @@
    },
    "outputs": [],
    "source": [
-    "train_set = train_set.drop(labels=['total_start_trips'], axis=1)\n",
-    "test_set = test_set.drop(labels=['total_start_trips'], axis=1)"
+    "# Extract out only the features we want to use\n",
+    "\n",
+    "feature_cols = [\n",
+    " 'totalDocks',\n",
+    " 'percent_car',\n",
+    " 'logDistRests',\n",
+    " 'within_cc_bid',\n",
+    " 'logIntersectionDists',\n",
+    " 'logStationDists',\n",
+    " 'laggedTrips']\n",
+    "\n",
+    "train_set = train_set[feature_cols]\n",
+    "test_set = test_set[feature_cols]"
    ]
   },
   {
@@ -2871,6 +3094,7 @@
    },
    "outputs": [],
    "source": [
+    "# Setup the pipeline with a standard scaler\n",
     "regr = make_pipeline(\n",
     "    StandardScaler(), RandomForestRegressor(random_state=42)\n",
     ")"
@@ -2896,6 +3120,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Important:** just like last week, we will need to prefix the parameter name with the name of the pipeline step, in this case, \"randomforestregressor\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2910,6 +3145,17 @@
     "\n",
     "# Run the search\n",
     "grid.fit(train_set.values, y_train);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Evaluate the best estimator on the test set:"
    ]
   },
   {
@@ -2928,6 +3174,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate a linear model (baseline) on the test set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2937,6 +3190,7 @@
    },
    "outputs": [],
    "source": [
+    "# Set up a  linear pipeline\n",
     "linear = make_pipeline(StandardScaler(), LinearRegression())\n",
     "\n",
     "# Fit on train set\n",
@@ -2954,7 +3208,11 @@
     }
    },
    "source": [
-    "## Feature importances"
+    "## Which features were the most important?\n",
+    "\n",
+    "From our earlier correlation analysis, we should expect the most important features to be:\n",
+    "- the spatially lagged trip counts\n",
+    "- the distance to the nearest stations"
    ]
   },
   {
@@ -2967,7 +3225,7 @@
    },
    "outputs": [],
    "source": [
-    "# The regressor\n",
+    "# The best model\n",
     "regressor = grid.best_estimator_[\"randomforestregressor\"]\n",
     "\n",
     "# Create the dataframe with importances\n",
@@ -2979,7 +3237,7 @@
     "importance = importance.sort_values(\"Importance\", ascending=False).iloc[:50]\n",
     "\n",
     "# Plot\n",
-    "importance.hvplot.barh(x=\"Feature\", y=\"Importance\", flip_yaxis=True, height=700)"
+    "importance.hvplot.barh(x=\"Feature\", y=\"Importance\", flip_yaxis=True, height=500)"
    ]
   },
   {
@@ -3009,6 +3267,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Use the test set index (`test_set.index`) to get the data from the original data frame (`bike_data`).\n",
+    "\n",
+    "This will ensure we will have `geometry` info (not used in the modeling) for our test data set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set.index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -3026,6 +3306,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test data extracted from our original data frame\n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    " #### The data frame indices lines up!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Now, make our predictions, and convert them from log to raw counts:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -3033,8 +3354,18 @@
    },
    "outputs": [],
    "source": [
+    "# Predictions for log of total trip counts\n",
+    "log_predictions = grid.best_estimator_.predict(test_set)\n",
+    "\n",
     "# Convert the predicted test values from log\n",
-    "X['prediction'] = np.exp(grid.best_estimator_.predict(test_set))"
+    "X['prediction'] = np.exp(log_predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's make the plot with side-by-side panels for actual and predicted:"
    ]
   },
   {
@@ -3073,11 +3404,43 @@
     }
    },
    "source": [
+    "## The results are... not great\n",
+    "\n",
+    "#### The good\n",
+    "We are capturing the general trend of within Center City vs. outside Center City\n",
+    "\n",
+    "#### The bad\n",
+    "The values of the trip counts for those stations within Center City do not seem to be well-represented"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Exercise: can we improve the model?\n",
     "\n",
-    "Yes! This is a classic example of underfitting. With only ten features, we should be able to improve with new features?\n",
+    "Yes! \n",
     "\n",
-    "**Options**\n",
+    "This is a classic example of underfitting, for a few reasons:\n",
+    "\n",
+    "- The analysis only used seven features. We should be able to improve the fit by adding more features, particularly features that capture information of the stations within Center City (where the model seems to be struggling).\n",
+    "- The correlation analysis did not indicate much correlation between features, and the features all had a pretty large correlation with the total trip counts. So, in some sense, the features all seem to be important, and we just need to add more."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Features to investigate:\n",
+    "\n",
     "- Additional census demographic data: \n",
     "    - e.g., population, income, percent with bachelor's degree or higher\n",
     "    - See https://api.census.gov/data/2017/acs/acs5/variables.html for column names!\n",
